fix: maybe fixed some weird layout issues

--- a/src/components/Site.scss
+++ b/src/components/Site.scss
@@ -26,13 +26,13 @@
 		> .sidebar
 		{
 			height: 100%;
-			overflow: hidden;
+			overflow: scroll;
 		}
 
 		> .content
 		{
 			height: 100%;
-			overflow: hidden;
+			overflow: scroll;
 		}
 	}
 }
